Updated settings, split out CSS and React plugins

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,29 +1,37 @@
 {
-  "prettier.eslintIntegration": true,
+  "coc.preferences.extensionUpdateCheck": "weekly",
+  "codeLens.enable": true,
+  "css.enable": true,
+  "css.lint.boxModel": "warning",
+  "css.lint.ieHack": "warning",
+  "css.validate": true,
+  "diagnostic.errorSign": "•",
+  "diagnostic.infoSign": "•",
+  "diagnostic.warningSign": "•",
+  "eslint.autoFix": true,
   "eslint.enable": true,
   "eslint.packageManager": "yarn",
-  "eslint.autoFix": true,
-  "css.enable": true,
-  "json.enable": true,
-  "html.enable": true,
-  "tslint.run": "onSave",
   "eslint.run": "onSave",
-  "css.validate": true,
-  "scss.validate": true,
-  "tslint.enable": true,
+  "html.enable": true,
   "html.filetypes": ["html", "handlebars", "erb", "ejs"],
-  "codeLens.enable": true,
+  "javascript.referencesCodeLens.enable": true,
+  "json.enable": true,
   "list.autoResize": true,
-  "css.lint.ieHack": "warning",
-  "tsserver.enable": true,
-  "scss.lint.ieHack": "warning",
-  "prettier.useTabs": true,
-  "tslint.jsEnable": true,
-  "css.lint.boxModel": "warning",
-  "tslint.configFile": "~/.dotfiles/tsconfig.json",
+  "prettier.eslintIntegration": true,
   "prettier.tabWidth": 2,
+  "prettier.useTabs": true,
+  "scss.lint.ieHack": "warning",
+  "scss.validate": true,
   "suggest.echodocSupport": true,
   "suggest.maxCompleteItemCount": 20,
+  "tslint.configFile": "~/.dotfiles/tsconfig.json",
+  "tslint.enable": true,
+  "tslint.jsEnable": true,
+  "tslint.run": "onSave",
+  "tsserver.enable": true,
+  "typescript.referencesCodeLens.enable": true,
+  "typescript.suggest.enabled": true,
+  "typescript.suggestionActions.enabled": false,
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "typescript",
@@ -42,14 +50,5 @@
   "snippets.extends": {
     "javascriptreact": ["javascript"],
     "typescript": ["javascript"]
-  },
-
-  "diagnostic.errorSign": "•",
-  "diagnostic.warningSign": "•",
-  "diagnostic.infoSign": "•",
-  "typescript.suggest.enabled": true,
-  "typescript.referencesCodeLens.enable": true,
-  "javascript.referencesCodeLens.enable": true,
-  "typescript.suggestionActions.enabled": false,
-  "coc.preferences.extensionUpdateCheck": "weekly"
+  }
 }
