--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ yarn-error.log
 .byebug_history
 .env*
 yarn.lock
-zsh/*
+zsh/private
 
 # Ignore application configuration
 /config/application.yml
