--- a/.gitconfig
+++ b/.gitconfig
@@ -32,8 +32,12 @@
 	conflictstyle = diff3
 
 [core]
-  pager = less -FRSX
+  # pager = less -FRSX
   editor = nvim
+  pager = delta --plus-color="#012800" --minus-color="#340001" --theme='Monokai Extended'
+
+[interactive]
+    diffFilter = delta --color-only
 
 [alias]
   a = add -A
