--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,9 +84,9 @@ set -g @continuum-save-interval '5'
 set -g @continuum-restore 'on'
 
 # Enable mouse support in ~/.tmux.conf
-set-option -g mouse-select-pane on
-set-option -g mouse-select-window on
-set-window-option -g mode-mouse on
+# set-option -g mouse-select-pane on
+# set-option -g mouse-select-window on
+# set-window-option -g mode-mouse on
 
 set -g status-right '#{prefix_highlight}'
 
