--- a/.gitconfig
+++ b/.gitconfig
@@ -113,34 +113,34 @@
 	# similar to whatchanged, but gives a dir-level overview:
 	# usage: git wd [diff-against=HEAD] [max-depth=4]
 	wd = "!f() { git --paginate diff --dirstat=cumulative,files,0 ${1:-HEAD} | awk '{print $2}' | cut -d / -f1-${2:-4} | sort | uniq; }; f"
-#   a = add -A
-#   b = branch
-#   br = branch
-#   ci = commit
-#   co = checkout
-#   d = !git --no-pager diff
-#   df = difftool
-#   dt  = difftool
-#   fo = fetch origin
-#   s = status
-#   st = status -sb
-#   stat = !git --no-pager diff --stat
-#   log-fn = "!f() { git log -L :$1:$2; }; f"
-#   last = log -1 --oneline
-#   p = push -u origin HEAD
+  a = add -A
+  b = branch
+  br = branch
+  ci = commit
+  co = checkout
+  d = !git --no-pager diff
+  df = difftool
+  dt  = difftool
+  fo = fetch origin
+  s = status
+  st = status -sb
+  stat = !git --no-pager diff --stat
+  log-fn = "!f() { git log -L :$1:$2; }; f"
+  last = log -1 --oneline
+  p = push -u origin HEAD
 #   # Clean merged branches
-#   sweep = !git branch --merged master | grep -v 'master$' | xargs git branch -d && git remote prune origin
+  sweep = !git branch --merged master | grep -v 'master$' | xargs git branch -d && git remote prune origin
 #   # http://www.jukie.net/bart/blog/pimping-out-git-log
-#   lg = log --graph --all --pretty=format:'%Cred%h%Creset - %s %Cgreen(%cr) %C(bold blue)%an%Creset %C(yellow)%d%Creset'
-#   lgd = log --oneline --graph --pretty='[%ad] %C(bold blue)%cn%Creset: %s %C(yellow)%D%Creset' --date=format-local:'%d.%m.%y'
-#   lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit -15
+  lg = log --graph --all --pretty=format:'%Cred%h%Creset - %s %Cgreen(%cr) %C(bold blue)%an%Creset %C(yellow)%d%Creset'
+  lgd = log --oneline --graph --pretty='[%ad] %C(bold blue)%cn%Creset: %s %C(yellow)%D%Creset' --date=format-local:'%d.%m.%y'
+  lgb = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit -15
 # # Serve local repo. http://coderwall.com/p/eybtga
 #   # Then other can access via `git clone git://#{YOUR_IP_ADDRESS}/
-#   serve = !git daemon --reuseaddr --verbose  --base-path=. --export-all ./.git
-#   m = checkout master
-#   dev = checkout develop
+  serve = !git daemon --reuseaddr --verbose  --base-path=. --export-all ./.git
+  m = checkout master
+  dev = checkout develop
 #   # Removes a file from the index
-#   unstage = reset HEAD --
+  unstage = reset HEAD --
 [help]
   autocorrect = 10
 
