--- a/.gitconfig
+++ b/.gitconfig
@@ -40,9 +40,16 @@
 	plus-color="#012800" 
 	minus-color="#340001" 
 	theme='Monokai Extended'
+	features = side-by-side line-numbers decorations
+  whitespace-error-style = 22 reverse
 
 [interactive]
-    diffFilter = delta --color-only
+  diffFilter = delta --color-only
+
+[delta "decorations"]
+  commit-decoration-style = bold yellow box ul
+  file-style = bold yellow ul
+	file-decoration-style = none
 
 [alias]
 	abbrev = !sh -c 'git rev-parse --short ${1-`echo HEAD`}' -
