--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,9 @@ set -g mouse on
 # sane scrolling
 set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 
-# set prefix C-x
+unbind-key C-b
+set-option -g prefix C-x
+bind-key C-x send-prefix
 
 # vim-like pane resizing  
 bind -r C-k resize-pane -U
@@ -103,5 +105,6 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin "arcticicestudio/nord-tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
 run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
 run -b '~/.tmux/plugins/tpm/tpm'
