--- a/.tmux.conf
+++ b/.tmux.conf
@@ -105,6 +105,6 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 # set -g @plugin "arcticicestudio/nord-tmux"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-set-environment -g PATH "/usr/local/bin:/bin:/usr/bin"
+set-environment -g PATH "/usr/local/bin:/bin:/usr/bin:$PATH"
 run-shell ~/.tmux/plugins/tmux-continuum/continuum.tmux
 run -b '~/.tmux/plugins/tpm/tpm'
