--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Dmitry Melnikov
-	email = d.dash.mv@gmail.com
+	email = dmitry.melnikov@changehealthcare.com
 [init]
 	defaultBranch=develop
 [filter "lfs"]
