--- a/vim/coc-settings.json
+++ b/vim/coc-settings.json
@@ -40,5 +40,6 @@
   "coc.preferences.formatOnType": true,
   "prettier.singleQuote": true,
   "javascript.autoClosingTags": true,
-  "typescript.autoClosingTags": true
+  "typescript.autoClosingTags": true,
+  "typescript.referencesCodeLens.showOnAllFunctions": true
 }
