--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,8 @@ set -g base-index 1 # set the base index for windows to 1 instead of 0
 setw -g pane-base-index 1
 set -g renumber-windows on
 set -g mouse off
-set -g default-terminal "tmux-256color"
-set -g terminal-overrides 'xterm*:smcup@:rmcup@' # sane scrolling
+# set -g default-terminal "tmux-256color"
+# set -g terminal-overrides 'xterm*:smcup@:rmcup@' # sane scrolling
 set -g mode-keys vi
 set -g status-keys vi
 set -g status on
