--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,63 +1,63 @@
-set -g prefix C-x # set the prefix
-set -s escape-time 1 # setting the delay between prefix and command
-set -g base-index 1 # set the base index for windows to 1 instead of 0
-setw -g pane-base-index 1
-set -g renumber-windows on
-set -g mouse off
-# set -g default-terminal "tmux-256color"
-# set -g terminal-overrides 'xterm*:smcup@:rmcup@' # sane scrolling
-set -g mode-keys vi
-set -g status-keys vi
-set -g status on
-set -g status-interval 60
-set -g status-left "[ #S ] "
-# set -g status-left-length 260
-set -g status-right "#{prefix_highlight} | %a %M %b "
-# set -g status-justify centre
-# enable activity alerts
-setw -g monitor-activity on
-set -g visual-activity on
-# automatically set window title according to the running program
-setw -g automatic-rename on
-set -g set-titles on
-# binding
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# splitting panes with | and -
-bind | split-window -h
-bind - split-window -v
-# vim-like pane resizing
-bind -r C-k resize-pane -U 1
-bind -r C-j resize-pane -D 1
-bind -r C-h resize-pane -L 1
-bind -r C-l resize-pane -R 1
-# vim-like pane switching
-bind -r k select-pane -U
-bind -r j select-pane -D
-bind -r h select-pane -L
-bind -r l select-pane -R
-# move windows around
-bind-key -n C-S-h swap-window -t -1\; select-window -t -1
-bind-key -n C-S-l swap-window -t +1\; select-window -t +1
-# colors
-set -g status-style fg=white,dim,bg=color69 # (dim, bright (or bold), reverse, and blink in addition to colors
-# set the color of the window list
-setw -g window-status-style fg=white,bg=color69
-# set colors for the active window
-setw -g window-status-current-style fg=color69,bold,bg=white
-# setw -g pane-border-style fg=green,bg=black
-# setw -g pane-active-border-style fg=white,bg=yellow
-# setw -g window-style fg=colour240,bg=colour235
-# setw -g window-active-style fg=white,bg=black
-set -g message-style fg=color232,bg=color228
+# set -g prefix C-x # set the prefix
+# set -s escape-time 1 # setting the delay between prefix and command
+# set -g base-index 1 # set the base index for windows to 1 instead of 0
+# setw -g pane-base-index 1
+# set -g renumber-windows on
+# set -g mouse off
+# # set -g default-terminal "tmux-256color"
+# # set -g terminal-overrides 'xterm*:smcup@:rmcup@' # sane scrolling
+# set -g mode-keys vi
+# set -g status-keys vi
+# set -g status on
+# set -g status-interval 60
+# set -g status-left "[ #S ] "
+# # set -g status-left-length 260
+# set -g status-right "#{prefix_highlight} | %a %M %b "
+# # set -g status-justify centre
+# # enable activity alerts
+# setw -g monitor-activity on
+# set -g visual-activity on
+# # automatically set window title according to the running program
+# setw -g automatic-rename on
+# set -g set-titles on
+# # binding
+# bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# # splitting panes with | and -
+# bind | split-window -h
+# bind - split-window -v
+# # vim-like pane resizing
+# bind -r C-k resize-pane -U 1
+# bind -r C-j resize-pane -D 1
+# bind -r C-h resize-pane -L 1
+# bind -r C-l resize-pane -R 1
+# # vim-like pane switching
+# bind -r k select-pane -U
+# bind -r j select-pane -D
+# bind -r h select-pane -L
+# bind -r l select-pane -R
+# # move windows around
+# bind-key -n C-S-h swap-window -t -1\; select-window -t -1
+# bind-key -n C-S-l swap-window -t +1\; select-window -t +1
+# # colors
+# set -g status-style fg=white,dim,bg=color69 # (dim, bright (or bold), reverse, and blink in addition to colors
+# # set the color of the window list
+# setw -g window-status-style fg=white,bg=color69
+# # set colors for the active window
+# setw -g window-status-current-style fg=color69,bold,bg=white
+# # setw -g pane-border-style fg=green,bg=black
+# # setw -g pane-active-border-style fg=white,bg=yellow
+# # setw -g window-style fg=colour240,bg=colour235
+# # setw -g window-active-style fg=white,bg=black
+# set -g message-style fg=color232,bg=color228
 
 
-# release buttons for vim
-unbind-key -n C-p
-unbind-key -n C-n
-unbind-key -n C-f
+# # release buttons for vim
+# unbind-key -n C-p
+# unbind-key -n C-n
+# unbind-key -n C-f
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-run '~/.tmux/plugins/tpm/tpm'
+# set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @plugin 'tmux-plugins/tmux-continuum'
+# set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+# run '~/.tmux/plugins/tpm/tpm'
