--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,12 @@
 set -g prefix C-x # set the prefix
 set -s escape-time 1 # setting the delay between prefix and command
 set -g base-index 1 # set the base index for windows to 1 instead of 0
+set -g default-terminal "screen-256color"
+# set-option -ga terminal-overrides ",xterm-256color:Tc"
+# set -g default-terminal "tmux-256color"
+# set -ga terminal-overrides ",*256col*:Tc"
+# set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set-environment -g COLORTERM "truecolor"
 setw -g pane-base-index 1
 set -g renumber-windows on
 set -g mouse off
