--- a/tmux.conf
+++ b/tmux.conf
@@ -39,11 +39,11 @@ bind -r l select-pane -R
 bind-key -n C-S-h swap-window -t -1\; select-window -t -1
 bind-key -n C-S-l swap-window -t +1\; select-window -t +1
 # colors
-set -g status-style fg=white,dim,bg=color69 # (dim, bright (or bold), reverse, and blink in addition to colors
+set -g status-style fg=color245,bg=color235 # (dim, bright (or bold), reverse, and blink in addition to colors
 # set the color of the window list
-setw -g window-status-style fg=white,bg=color69
+setw -g window-status-style fg=color245,bg=color235
 # set colors for the active window
-setw -g window-status-current-style fg=color69,bold,bg=white
+setw -g window-status-current-style fg=color0,bg=color107
 # setw -g pane-border-style fg=green,bg=black
 # setw -g pane-active-border-style fg=white,bg=yellow
 # setw -g window-style fg=colour240,bg=colour235
