--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ setw -g pane-base-index 1
 set -g renumber-windows on
 set -g mouse off
 set -g default-terminal "tmux-256color"
+set -g default-shell "/bin/zsh"
+set -g default-command "/bin/zsh"
 # set -g terminal-overrides 'xterm*:smcup@:rmcup@' # sane scrolling
 set -g mode-keys vi
 set -g status-keys vi
