--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,7 +3,7 @@ set -s escape-time 1 # setting the delay between prefix and command
 set -g base-index 1 # set the base index for windows to 1 instead of 0
 setw -g pane-base-index 1
 set -g renumber-windows on
-set -g mouse off
+set -g mouse on
 set -g default-terminal "tmux-256color"
 set -g default-shell "/bin/zsh"
 set -g default-command "/bin/zsh"
