--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-.bundle
-log/*.log
-tmp/**/*
-tmp/*
-!log/.keep
-!tmp/.keep
-*.swp
 .DS_Store
-public/assets
-public/packs
-public/packs-test
-node_modules
-yarn-error.log
-.byebug_history
-.env*
-yarn.lock
-zsh/private
-.notes
-local_export.zsh
-nvim/plugin/packer_compiled.lua
-
-# Ignore application configuration
-/config/application.yml
+**/*.log
+**/private
+**/local_export
+**/autoload
+**/vim/plugged
+**/.netrwhist
+nvim/plugin
+.metals
