--- a/alacritty.yml
+++ b/alacritty.yml
@@ -13,9 +13,9 @@ font:
   # Style can be specified to pick a specific face.
   normal:
     # family: JetBrainsMono Nerd Font
-    # family: Berkeley Mono
+    family: Berkeley Mono
     # family: DankMono Nerd Font Mono
-    family: MonoLisa
+    # family: MonoLisa
     style: Regular
     # family: "Fira Code"
     # family: "Source Code Pro"
@@ -24,9 +24,9 @@ font:
   # The bold font face
   bold:
     # family: JetBrainsMono Nerd Font
-    # family: Berkeley Mono
+    family: Berkeley Mono
     # family: DankMono Nerd Font Mono
-    family: MonoLisa
+    # family: MonoLisa
     style: Bold
     # family: "Fira Code"
     # family: "Source Code Pro"
@@ -35,16 +35,17 @@ font:
   italic:
     # family: JetBrainsMono Nerd Font
     # family: DankMono Nerd Font Mono
-    # family: Berkeley Mono
-    family: MonoLisa
-    style: Light Italic
+    family: Berkeley Mono
+    # family: MonoLisa
+    style: Light
+    # style: "Light Italic"
     # style: "Light Oblique"
     # family: "Fira Code"
     # family: "Source Code Pro"
     # style: "Medium Italic"
 
   # Point size of the font
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
