--- a/alacritty.yml
+++ b/alacritty.yml
@@ -2,7 +2,7 @@ general:
   live_config_reload: true
 
 window:
-#   decorations: transparent
+  #   decorations: transparent
   padding:
     x: 10
     y: 10
@@ -10,22 +10,22 @@ window:
 # Font configuration (changes require restart)
 font:
   normal:
-    family: Dank Mono
+    family: B612 Mono
     # family: Berkeley Mono
     style: Regular
 
   # The bold font face
   bold:
-    family: Dank Mono
+    family: B612 Mono
     style: Bold
 
   # The italic font face
   italic:
-    family: Dank Mono
+    family: B612 Mono
     style: Italic
 
   # Point size of the font
-  size: 16.0
+  size: 14.0
 
   offset:
     x: 0
@@ -41,7 +41,6 @@ draw_bold_text_with_bright_colors: false
 
 custom_cursor_colors: true
 
-
 ### Edge (Light variant)
 schemes:
   everforest_dark_hard: &everforest_dark_hard
@@ -49,135 +48,135 @@ schemes:
       background: '#272e33'
       foreground: '#d3c6aa'
     normal:
-      black:   '#414b50'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#414b50'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
     bright:
-      black:   '#475258'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#475258'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
   everforest_dark_medium: &everforest_dark_medium
     primary:
       background: '#2d353b'
       foreground: '#d3c6aa'
     normal:
-      black:   '#475258'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#475258'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
     bright:
-      black:   '#475258'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#475258'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
   everforest_dark_soft: &everforest_dark_soft
     primary:
       background: '#333c43'
       foreground: '#d3c6aa'
     normal:
-      black:   '#4d5960'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#4d5960'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
     bright:
-      black:   '#4d5960'
-      red:     '#e67e80'
-      green:   '#a7c080'
-      yellow:  '#dbbc7f'
-      blue:    '#7fbbb3'
+      black: '#4d5960'
+      red: '#e67e80'
+      green: '#a7c080'
+      yellow: '#dbbc7f'
+      blue: '#7fbbb3'
       magenta: '#d699b6'
-      cyan:    '#83c092'
-      white:   '#d3c6aa'
+      cyan: '#83c092'
+      white: '#d3c6aa'
   everforest_light_hard: &everforest_light_hard
     primary:
       background: '#fffbef'
       foreground: '#5c6a72'
     normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#e8e5d5'
+      cyan: '#35a77c'
+      white: '#e8e5d5'
     bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#e8e5d5'
+      cyan: '#35a77c'
+      white: '#e8e5d5'
   everforest_light_medium: &everforest_light_medium
     primary:
       background: '#fdf6e3'
       foreground: '#5c6a72'
     normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#e0dcc7'
+      cyan: '#35a77c'
+      white: '#e0dcc7'
     bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#e0dcc7'
+      cyan: '#35a77c'
+      white: '#e0dcc7'
   everforest_light_soft: &everforest_light_soft
     primary:
       background: '#f3ead3'
       foreground: '#5c6a72'
     normal:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#d8d3ba'
+      cyan: '#35a77c'
+      white: '#d8d3ba'
     bright:
-      black:   '#5c6a72'
-      red:     '#f85552'
-      green:   '#8da101'
-      yellow:  '#dfa000'
-      blue:    '#3a94c5'
+      black: '#5c6a72'
+      red: '#f85552'
+      green: '#8da101'
+      yellow: '#dfa000'
+      blue: '#3a94c5'
       magenta: '#df69ba'
-      cyan:    '#35a77c'
-      white:   '#d8d3ba'
+      cyan: '#35a77c'
+      white: '#d8d3ba'
 
-  edge_light:	  &edge_light
+  edge_light: &edge_light
     primary:
       background: "0xfafafa"
       foreground: "0x4b505b"
@@ -201,7 +200,41 @@ schemes:
       magenta: "0xb05ccc"
       cyan: "0x3a8b84"
       white: "0xfafafa"
+      # From the famous Cobalt2 sublime theme
+      # Source : https://github.com/wesbos/cobalt2/tree/master/Cobalt2
+cobalt2:
+  # Default colors
+  &cobalt2
+  primary:
+    background: '0x122637'
+    foreground: '0xffffff'
 
+  # Colors the cursor will use if `custom_cursor_colors` is true
+  cursor:
+    text: '0x122637'
+    cursor: '0xf0cb09'
+
+  # Normal colors
+  normal:
+    black: '0x000000'
+    red: '0xff0000'
+    green: '0x37dd21'
+    yellow: '0xfee409'
+    blue: '0x1460d2'
+    magenta: '0xff005d'
+    cyan: '0x00bbbb'
+    white: '0xbbbbbb'
+
+  # Bright colors
+  bright:
+    black: '0x545454'
+    red: '0xf40d17'
+    green: '0x3bcf1d'
+    yellow: '0xecc809'
+    blue: '0x5555ff'
+    magenta: '0xff55ff'
+    cyan: '0x6ae3f9'
+    white: '0xffffff'
 
   kanagawa: &kanagawa
     primary:
@@ -210,25 +243,25 @@ schemes:
 
     # Normal colors
     normal:
-      black:   '0x090618'
-      red:     '0xc34043'
-      green:   '0x76946a'
-      yellow:  '0xc0a36e'
-      blue:    '0x7e9cd8'
+      black: '0x090618'
+      red: '0xc34043'
+      green: '0x76946a'
+      yellow: '0xc0a36e'
+      blue: '0x7e9cd8'
       magenta: '0x957fb8'
-      cyan:    '0x6a9589'
-      white:   '0xc8c093'
+      cyan: '0x6a9589'
+      white: '0xc8c093'
 
     # Bright colors
     bright:
-      black:   '0x727169'
-      red:     '0xe82424'
-      green:   '0x98bb6c'
-      yellow:  '0xe6c384'
-      blue:    '0x7fb4ca'
+      black: '0x727169'
+      red: '0xe82424'
+      green: '0x98bb6c'
+      yellow: '0xe6c384'
+      blue: '0x7fb4ca'
       magenta: '0x938aa9'
-      cyan:    '0x7aa89f'
-      white:   '0xdcd7ba'
+      cyan: '0x7aa89f'
+      white: '0xdcd7ba'
     selection:
       background: '0x2d4f67'
       foreground: '0xc8c093'
@@ -237,13 +270,13 @@ schemes:
       - { index: 16, color: '0xffa066' }
       - { index: 17, color: '0xff5d62' }
 
-colors: *everforest_dark_hard
+# colors: *everforest_dark_hard
+colors: *cobalt2
 
 bell:
   animation: EaseOutExpo
   color: '#ffffff'
   duration: 0
-
 
 # Key bindings
 #
@@ -339,64 +372,62 @@ bell:
 #   - AppKeypad
 #
 key_bindings:
-  - { key: V,        mods: Command,       action: Paste                        }
-  - { key: C,        mods: Command,       action: Copy                         }
-  - { key: Q,        mods: Command,       action: Quit                         }
-  - { key: N,        mods: Command,       action: SpawnNewInstance             }
-  - { key: Return,   mods: Command,       action: ToggleFullscreen             }
+  - { key: V, mods: Command, action: Paste }
+  - { key: C, mods: Command, action: Copy }
+  - { key: Q, mods: Command, action: Quit }
+  - { key: N, mods: Command, action: SpawnNewInstance }
+  - { key: Return, mods: Command, action: ToggleFullscreen }
 
-  - { key: Home,                          chars: "\x1bOH",   mode: AppCursor   }
-  - { key: Home,                          chars: "\x1b[H",   mode: ~AppCursor  }
-  - { key: End,                           chars: "\x1bOF",   mode: AppCursor   }
-  - { key: End,                           chars: "\x1b[F",   mode: ~AppCursor  }
-  - { key: Equals,   mods: Command,       action: IncreaseFontSize             }
-  - { key: Minus,    mods: Command,       action: DecreaseFontSize             }
-  - { key: Minus,    mods: Command|Shift, action: ResetFontSize                }
-  - { key: PageUp,   mods: Shift,         chars: "\x1b[5;2~"                   }
-  - { key: PageUp,   mods: Control,       chars: "\x1b[5;5~"                   }
-  - { key: PageUp,                        chars: "\x1b[5~"                     }
-  - { key: PageDown, mods: Shift,         chars: "\x1b[6;2~"                   }
-  - { key: PageDown, mods: Control,       chars: "\x1b[6;5~"                   }
-  - { key: PageDown,                      chars: "\x1b[6~"                     }
-  - { key: Left,     mods: Shift,         chars: "\x1b[1;2D"                   }
-  - { key: Left,     mods: Control,       chars: "\x1b[1;5D"                   }
-  - { key: Left,     mods: Alt,           chars: "\x1b[1;3D"                   }
-  - { key: Left,                          chars: "\x1b[D",   mode: ~AppCursor  }
-  - { key: Left,                          chars: "\x1bOD",   mode: AppCursor   }
-  - { key: Right,    mods: Shift,         chars: "\x1b[1;2C"                   }
-  - { key: Right,    mods: Control,       chars: "\x1b[1;5C"                   }
-  - { key: Right,    mods: Alt,           chars: "\x1b[1;3C"                   }
-  - { key: Right,                         chars: "\x1b[C",   mode: ~AppCursor  }
-  - { key: Right,                         chars: "\x1bOC",   mode: AppCursor   }
-  - { key: Up,       mods: Shift,         chars: "\x1b[1;2A"                   }
-  - { key: Up,       mods: Control,       chars: "\x1b[1;5A"                   }
-  - { key: Up,       mods: Alt,           chars: "\x1b[1;3A"                   }
-  - { key: Up,                            chars: "\x1b[A",   mode: ~AppCursor  }
-  - { key: Up,                            chars: "\x1bOA",   mode: AppCursor   }
-  - { key: Down,     mods: Shift,         chars: "\x1b[1;2B"                   }
-  - { key: Down,     mods: Control,       chars: "\x1b[1;5B"                   }
-  - { key: Down,     mods: Alt,           chars: "\x1b[1;3B"                   }
-  - { key: Down,                          chars: "\x1b[B",   mode: ~AppCursor  }
-  - { key: Down,                          chars: "\x1bOB",   mode: AppCursor   }
-  - { key: Tab,      mods: Shift,         chars: "\x1b[Z"                      }
-  - { key: F1,                            chars: "\x1bOP"                      }
-  - { key: F2,                            chars: "\x1bOQ"                      }
-  - { key: F3,                            chars: "\x1bOR"                      }
-  - { key: F4,                            chars: "\x1bOS"                      }
-  - { key: F5,                            chars: "\x1b[15~"                    }
-  - { key: F6,                            chars: "\x1b[17~"                    }
-  - { key: F7,                            chars: "\x1b[18~"                    }
-  - { key: F8,                            chars: "\x1b[19~"                    }
-  - { key: F9,                            chars: "\x1b[20~"                    }
-  - { key: F10,                           chars: "\x1b[21~"                    }
-  - { key: F11,                           chars: "\x1b[23~"                    }
-  - { key: F12,                           chars: "\x1b[24~"                    }
-  - { key: Back,                          chars: "\x7f"                        }
-  - { key: Back,     mods: Alt,           chars: "\x1b\x7f"                    }
-  - { key: Insert,                        chars: "\x1b[2~"                     }
-  - { key: Delete,                        chars: "\x1b[3~"                     }
-
-    # shortcuts for tmux. the leader key is control-b (0x02)
+  - { key: Home, chars: "\eOH", mode: AppCursor }
+  - { key: Home, chars: "\e[H", mode: ~AppCursor }
+  - { key: End, chars: "\eOF", mode: AppCursor }
+  - { key: End, chars: "\e[F", mode: ~AppCursor }
+  - { key: Equals, mods: Command, action: IncreaseFontSize }
+  - { key: Minus, mods: Command, action: DecreaseFontSize }
+  - { key: Minus, mods: Command|Shift, action: ResetFontSize }
+  - { key: PageUp, mods: Shift, chars: "\e[5;2~" }
+  - { key: PageUp, mods: Control, chars: "\e[5;5~" }
+  - { key: PageUp, chars: "\e[5~" }
+  - { key: PageDown, mods: Shift, chars: "\e[6;2~" }
+  - { key: PageDown, mods: Control, chars: "\e[6;5~" }
+  - { key: PageDown, chars: "\e[6~" }
+  - { key: Left, mods: Shift, chars: "\e[1;2D" }
+  - { key: Left, mods: Control, chars: "\e[1;5D" }
+  - { key: Left, mods: Alt, chars: "\e[1;3D" }
+  - { key: Left, chars: "\e[D", mode: ~AppCursor }
+  - { key: Left, chars: "\eOD", mode: AppCursor }
+  - { key: Right, mods: Shift, chars: "\e[1;2C" }
+  - { key: Right, mods: Control, chars: "\e[1;5C" }
+  - { key: Right, mods: Alt, chars: "\e[1;3C" }
+  - { key: Right, chars: "\e[C", mode: ~AppCursor }
+  - { key: Right, chars: "\eOC", mode: AppCursor }
+  - { key: Up, mods: Shift, chars: "\e[1;2A" }
+  - { key: Up, mods: Control, chars: "\e[1;5A" }
+  - { key: Up, mods: Alt, chars: "\e[1;3A" }
+  - { key: Up, chars: "\e[A", mode: ~AppCursor }
+  - { key: Up, chars: "\eOA", mode: AppCursor }
+  - { key: Down, mods: Shift, chars: "\e[1;2B" }
+  - { key: Down, mods: Control, chars: "\e[1;5B" }
+  - { key: Down, mods: Alt, chars: "\e[1;3B" }
+  - { key: Down, chars: "\e[B", mode: ~AppCursor }
+  - { key: Down, chars: "\eOB", mode: AppCursor }
+  - { key: Tab, mods: Shift, chars: "\e[Z" }
+  - { key: F1, chars: "\eOP" }
+  - { key: F2, chars: "\eOQ" }
+  - { key: F3, chars: "\eOR" }
+  - { key: F4, chars: "\eOS" }
+  - { key: F5, chars: "\e[15~" }
+  - { key: F6, chars: "\e[17~" }
+  - { key: F7, chars: "\e[18~" }
+  - { key: F8, chars: "\e[19~" }
+  - { key: F9, chars: "\e[20~" }
+  - { key: F10, chars: "\e[21~" }
+  - { key: F11, chars: "\e[23~" }
+  - { key: F12, chars: "\e[24~" }
+  - { key: Back, chars: "" }
+  - { key: Back, mods: Alt, chars: "\e" }
+  - { key: Insert, chars: "\e[2~" }
+  - { key: Delete, chars: "\e[3~" } # shortcuts for tmux. the leader key is control-b (0x02)
   # - { key: W,        mods: Command,       chars: "\x02&"                       }  # close tab (kill)
   # - { key: T,        mods: Command,       chars: "\x02c"                       }  # new tab
   # - { key: RBracket, mods: Command|Shift, chars: "\x02n"                       }  # select next tab
@@ -416,25 +447,24 @@ mouse:
 
   # If this is `true`, the cursor is temporarily hidden when typing.
   hide_when_typing: true
-
   # URL launcher
   # url:
-    # This program is executed when clicking on a text which is recognized as a URL.
-    # The URL is always added to the command as the last parameter.
-    #
-    # When set to `None`, URL launching will be disabled completely.
-    #
-    # Default:
-    #   - (macOS) open
-    #   - (Linux) xdg-open
-    #   - (Windows) explorer
-    # launcher:
-    #   program: xdg-open
-    #   args: []
+  # This program is executed when clicking on a text which is recognized as a URL.
+  # The URL is always added to the command as the last parameter.
+  #
+  # When set to `None`, URL launching will be disabled completely.
+  #
+  # Default:
+  #   - (macOS) open
+  #   - (Linux) xdg-open
+  #   - (Windows) explorer
+  # launcher:
+  #   program: xdg-open
+  #   args: []
 
-    # These are the modifiers that need to be held down for opening URLs when clicking
-    # on them. The available modifiers are documented in the key binding section.
-    # modifiers: Control|Shift
+  # These are the modifiers that need to be held down for opening URLs when clicking
+  # on them. The available modifiers are documented in the key binding section.
+  # modifiers: Control|Shift
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
@@ -456,4 +486,3 @@ cursor:
   # If this is `true`, the cursor will be rendered as a hollow box when the
   # window is not focused.
   unfocused_hollow: true
-
